# PuckPilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/puckpilot/: cli.py  config.py
src/puckpilot/data/: goalies.py  moneypuck.py  nhl.py  store.py  sync.py
src/puckpilot/draft/: engine.py  replay.py  sim.py
src/puckpilot/engine/: aggregate.py  categories.py  lineup.py  lineup_replay.py  projections.py  validate.py  valuation.py  waivers.py
src/puckpilot/yahoo/: auth.py  client.py
tests/: __init__.py  conftest.py  test_auth.py  test_cli.py  test_draft.py  test_engine.py  test_lineup.py  test_moneypuck.py  test_moneypuck_live.py  test_nhl.py  test_nhl_live.py  test_store.py  test_sync.py  test_validate.py  test_waivers.py
